--- a/ruoyi-ui/package.json
+++ b/ruoyi-ui/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ruoyi",
+  "name": "dormitory",
   "version": "3.8.7",
-  "description": "若依管理系统",
-  "author": "若依",
+  "description": "宿舍管理系统",
+  "author": "sym",
   "license": "MIT",
   "scripts": {
     "dev": "vue-cli-service serve",
